--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Dmitry Kozhevnikov",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
