--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
@@ -47,6 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.2.3",
+    "@types/js-cookie": "^3.0.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "gh-pages": "^4.0.0",
     "sass": "^1.56.1"
   }
